# tap-nasa

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_nasa/: client.py  tap.py
tests/: test_core.py
