[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-nasa"
description = "Singer tap for NASA, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "NASA",
  "singer.io",
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrmondragon@hey.com"
[project.license]
file = "LICENSE"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrmondragon@hey.com"
[project.scripts]
tap-nasa = "tap_nasa.tap:TapNASA.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-nasa#readme"
Homepage = "https://github.com/reservoir-data/tap-nasa"
Repository = "https://github.com/reservoir-data/tap-nasa"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=8",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1",
  "ty>=0.0.1a21",
  "types-requests>=2.32.4.20250913",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_nasa",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
ty = "ty"
types-requests = "requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [ "tox>=4.53", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  "test",
]
[tool.tox.env.dependencies]
description = "check imports for transitive dependencies"
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.test]
description = "run tests on Python {py_dot_ver}"
base_python_file = [ ".python-version" ]
[tool.tox.env.typing]
description = "static type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_nasa", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_nasa", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
description = "run tests on Python {py_dot_ver}"
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_NASA_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
